fix(security): resolve XSS vulnerability in status panel and complete rebrand
Sanitize user inputs in status panel rendering with escapeHtml() to prevent
XSS attacks via domain filter patterns, Cache-Control headers, and timestamp
values. Complete remaining rebranding from Smart History to Obsidian Weave
in dashboard titles, locales, and console log prefixes.

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -9,7 +9,7 @@
         "message": "Smartly backup closed tabs to Obsidian with AI summaries and context linking."
     },
     "appTitle": {
-        "message": "Weave"
+        "message": "Obsidian Weave"
     },
     "settings": {
         "message": "Settings"
